hphp/test/slow/lang/redefine_function.php.expectf
Fatal error: Cannot redeclare foo() (previously declared in %s/redefine_function.php:5) in %s/redefine_function.php on line 9
